--- a/style.css
+++ b/style.css
@@ -17,6 +17,25 @@ body{
     font-size: 1.6rem;
 }
 
+main {
+    max-width: 32rem;
+
+    margin-inline: auto;
+
+    padding: 5.6rem 4rem;
+    box-sizing: content-box;
+
+    display: flex;
+    flex-direction: column;
+    gap: 3.2rem;
+
+}
+
+img {
+    width: 100%;
+    margin-block: 3.2rem;
+}
+
 button {
     font-family: 'Source Serif 4';
     background-color: #a54328;
@@ -28,18 +47,28 @@ button {
     
     border-radius: .6rem;
 
-    margin-top: 1.8rem;
+    margin-top: 3.2rem;
 }
 
 h1, h2 {
     font-size: 2.8rem;
+    line-height: 3.6rem;
 }
 
 h2 {
-    text-decoration: underline;
+    margin-bottom: 3.2rem;
 }
+
 
 p, li , strong {
     font-size: 1.4rem;
     line-height: 1.8rem;
+}
+
+ul, ol {
+    padding-left: 2.4rem;
+}
+
+ul {
+    margin-bottom: 2.4rem;
 }
