--- a/style.css
+++ b/style.css
@@ -51,8 +51,9 @@ button {
 }
 
 h1, h2 {
-    font-size: 2.8rem;
-    line-height: 3.6rem;
+    /* clamp (min, idel, alto) */
+    font-size: clamp(2.8rem, 2vw + 1rem, 4rem);
+    line-height: clamp(3.6rem, 2vw + 1rem, 5rem);
 }
 
 h2 {
@@ -61,8 +62,8 @@ h2 {
 
 
 p, li , strong {
-    font-size: 1.4rem;
-    line-height: 1.8rem;
+    font-size: clamp(1.4rem, 1vw + 01.4rem, 2rem);
+    line-height: clamp(1.8rem, 1vw + 0.4rem, 2.5rem);
 }
 
 ul, ol {
@@ -71,4 +72,37 @@ ul, ol {
 
 ul {
     margin-bottom: 2.4rem;
+}
+
+@media (min-width: 1120px) {
+    main {
+        flex-direction: row;
+        max-width: fit-content;
+        gap: 16rem;
+    }
+
+    .recipe {
+        max-width: 43.5rem;
+    }
+
+    .ingredients {
+        max-width: 52.5rem;
+    }
+
+    /* h1, h2 {
+        font-size: 2rem;
+        line-height: 2.5rem;
+    }
+
+    p, li, strong {
+        font-size: 2rem;
+        line-height: 2.5rem;
+    } */
+
+    button {
+        padding: 1rem 2rem;
+        font-size: 1.4rem;
+        line-height: 2.4rem;
+    }
+
 }
